--- a/playSound/bower.json
+++ b/playSound/bower.json
@@ -2,6 +2,10 @@
   "name": "playSound",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
+    "ngCordova": "~0.1.12-alpha"
+  },
+  "dependencies": {
+    "ngCordova": "~0.1.12-alpha"
   }
 }
